[package]
name = "wayland-tests"
version = "0.1.9"
edition = "2021"
rust-version = "1.71"
publish = false
autotests = false

[dependencies]

[dev-dependencies]
wayland-client = { path = "../wayland-client" }
wayland-server = { path = "../wayland-server" }
wayland-protocols = { path = "../wayland-protocols", features = ["client", "server"] }
tempfile = "3"

[features]
server_system = ["wayland-server/system"]
client_system = ["wayland-client/system"]
libwayland_client_1_23_0 = []
libwayland_server_1_22 = ["wayland-server/libwayland_1_22"]

[[test]]
name = "attach_to_surface"

[[test]]
name = "backend_socket_out_limits"

[[test]]
name = "client_bad_requests"

[[test]]
name = "client_connect_to_env"
harness = false

[[test]]
name = "client_connect_to_socket"
harness = false

[[test]]
name = "client_dispatch"

[[test]]
name = "client_globals_helpers"

[[test]]
name = "client_proxies"

[[test]]
name = "destructors"

[[test]]
name = "globals"

[[test]]
name = "protocol_errors"

[[test]]
name = "send_sync"

[[test]]
name = "server_clients"

[[test]]
name = "server_created_object"

[[test]]
name = "server_global_filter"

[[test]]
name = "server_global_post_error"

[[test]]
name = "server_resources"

[[test]]
name = "xdg_shell_ping"

[[test]]
name = "buffer_size"
